Fixed linespacing

--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -5,6 +5,6 @@
   padding: 25px;
 
   a {
-    margin: 0 5px 0 0;
+    margin-right: 10px;
   }
 }
