--- a/src/styles/_links.scss
+++ b/src/styles/_links.scss
@@ -1,4 +1,4 @@
 a {
   background-color: $white;
-  padding: 0 6px;
+  padding: 1px 7px;
 }
